--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,3 @@
 NODE_ENV=development
 PORT=5000
-MONGO_URL="mongodb://dbuser:sercretpassword@localhost:27020/?authSource=admin"
+MONGO_URL="mongodb://dbuser:secretpassword@localhost:27020/?authSource=admin"
