--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.7",
     "@types/errorhandler": "^1.5.0",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.14",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.36",
     "@types/node": "^14.11.2",
+    "@types/supertest": "^2.0.10",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
+    "axios": "^0.21.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.11.0",
     "eslint-config-prettier": "^6.12.0",
@@ -28,18 +33,22 @@
     "jest": "^26.6.0",
     "nodemon": "^2.0.4",
     "prettier": "^2.1.2",
+    "supertest": "^6.0.0",
     "ts-jest": "^26.4.0",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
   },
   "dependencies": {
     "@types/compression": "^1.7.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
     "express": "^5.0.0-alpha.8",
-    "mongoose": "^5.10.6"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.6",
+    "uuid": "^8.3.1"
   }
 }
