--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.36",
     "@types/node": "^14.11.2",
+    "@types/passport": "^1.0.4",
+    "@types/passport-oauth2": "^1.4.9",
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
@@ -49,6 +51,8 @@
     "express": "^5.0.0-alpha.8",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.6",
+    "passport": "^0.4.1",
+    "passport-oauth2": "^1.5.0",
     "uuid": "^8.3.1"
   }
 }
